# Shadowbroker

./: .env.example  .gitignore  .mise.local.toml  DOCKER_SECRETS.md  Makefile  README.md  ROADMAP.md  UPDATEPROTOCOL.md  compose.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.relay.yml  docker-compose.yml  meshnode.bat  meshnode.sh  start.bat  start.sh
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/config/: news_feeds.json
backend/data/: sat_gp_cache.json
backend/scripts/: release_helper.py
backend/services/: ais_stream.py  api_settings.py  carrier_tracker.py  cctv_pipeline.py  config.py  constants.py  data_fetcher.py  geocode.py  geopolitics.py  kiwisdr_fetcher.py  liveuamap_scraper.py  network_utils.py  news_feed_config.py  node_settings.py  radio_intercept.py  region_dossier.py  sentinel_search.py  shodan_connector.py  sigint_bridge.py  tinygs_fetcher.py  unusual_whales_connector.py  updater.py  wormhole_supervisor.py
backend/services/fetchers/: _store.py  earth_observation.py  flights.py  geo.py  infrastructure.py  meshtastic_map.py  military.py  news.py  plane_alert.py  satellites.py  trains.py
backend/services/mesh/: mesh_crypto.py  mesh_gate_mls.py  mesh_protocol.py  mesh_reputation.py  mesh_router.py  mesh_secure_storage.py
backend/tests/: conftest.py  test_api_smoke.py  test_gdelt_updater_hardening.py  test_release_helper.py
backend/tests/mesh/: test_wormhole_supervisor_hardening.py
desktop-shell/tauri-skeleton/src-tauri/: Cargo.toml  tauri.conf.json
(+76 files in other folders)
